syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message Market {
  string market_id = 1;
  string user_name = 2;
  string base_currency = 3;
  string quote_currency = 4;
  int64 min_order_amount = 5;
  int32 price_precision = 6;
  google.protobuf.Timestamp created_at = 7;
}

message ListMarket {
  string market_id = 1;
  string base_currency = 2;
  string quote_currency = 3;
  int64 min_order_amount = 4;
  int32 price_precision = 5;
  google.protobuf.Timestamp created_at = 6;
}
